<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_friends"
            android:icon="@drawable/friends_icon"
            android:title="@string/title_friends"/>

    <item
            android:id="@+id/navigation_groups"
            android:icon="@drawable/groups_icon"
            android:title="@string/title_groups"/>

    <item
            android:id="@+id/navigation_add"
            android:icon="@drawable/add_icon"
            android:title="@string/title_add"/>
    <item
            android:id="@+id/navigation_activities"
            android:icon="@drawable/activities_icon"
            android:title="@string/title_activities"/>
    <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/profile_icon"
            android:title="@string/title_profile"/>


</menu>
